# yuri

./: README.md  package.json  pnpm-lock.yaml
.agent/rules/: front-end-flavor.md
src/: App.css  App.tsx  store.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: certs.rs  client.rs  db.rs  lib.rs  main.rs  proxy.rs  rewrites.rs  server.rs
src/components/Client/: ApiClient.tsx
src/components/Layout/: ActivityBar.tsx  MainLayout.tsx  Sidebar.tsx
src/components/Traffic/: DiffViewer.tsx  RequestDetails.tsx  TrafficList.tsx
src/hooks/: useTrafficSocket.ts
src/types/: index.ts
