[package]
name = "yuri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hudsucker = { version = "0.20", features = ["http2"] }
sea-orm = { version = "2.0.0-rc.21", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "schema-sync",
    "entity-registry",
] }
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "rustls-tls",
    "http2",
] }
rcgen = "0.13"
prost = "0.13"
prost-reflect = "0.14"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
http = "1"
bytes = "1"
regex = "1"
tower = { version = "0.4", features = ["util"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures = "0.3"
tokio-stream = "0.1"
